--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -121,3 +121,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+a {
+  text-decoration: none;
+}
+
+img {
+  vertical-align: center;
+}
